apps/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
spec:
  rules:
    - host: staging.lab.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-my-app
                port:
                  number: 80
